--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,10 @@ board = esp32dev
 framework = arduino
 monitor_speed = 9600
 lib_deps = xreef/PCF8574 library@^2.3.4
+
+[env:esp8266dev]
+platform = espressif8266
+board = esp12e
+framework = arduino
+monitor_speed = 9600
+lib_deps = xreef/PCF8574 library @ ^2.3.4
